--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14965,3 +14965,44 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  ww1_france.497.t:0 "Strikes !"
  ww1_france.497.d:0 "A huge rally bringing together around 100,000 people took place this morning in Paris, organized by the main unions rallying around the CGT. A large part of the demonstration, made up of radical socialists, aimed to demand new social advances "as quickly as possible" for the workers of France. Overall, the pressure on the Blum No. 2 government is gradually increasing and the threat of the explosion of the coalition is felt.\n\nIf we do not order new reforms quickly, we risk losing the support of some of our left-wing deputies."
  ww1_france.497.a:0 "We must reform the country"
+
+ ####Balkan League####
+
+ balkan_league.1.t:0 "Bulgarian Financial Aid"
+ balkan_league.1.d:0 "We've reached an agreement with the Bulgarians, we are to recieve financial aid incase of a war with the Ottomans."
+ balkan_league.1.:0 "Sounds Great!"
+
+ balkan_league.2.t:0 "Negotiations with Serbia regarding a possible defense pact against Austria-Hungary?"
+ balkan_league.2.d:0 "Russia has urged us to form a defense pact with Serbia fearing Habsburg aggression... As much as we despise the Serbs we could possibly redirect the possible alliance into an Anti-Ottoman Crusade... The possibilities at our fingertips..."
+ balkan_league.2.a:0 "Yes, this alliance could be very fruitful..."
+ balkan_league.2.b:0 "Yea... no we're good actually"
+
+ balkan_league.3.t:0 "Bulgaria proposes the formation of an autonamous Macedonian State"
+ balkan_league.3.d:0 "Bulgaria wishes that an autonomaus Macedonian State should be set up to not only serve both our purposes but to also act as a buffer."
+ balkan_league.3.a:0 "Create an "autonomous state" only to have it bow down to Bulgaria? We think not!"
+ balkan_league.3.b:0 "Seems fair enough, surely we can outmanuever Foxy Ferdinand and cement the state under our influence"
+
+ balkan_league.4.t:0 "Serbia rejects an autonomaus Macedonian state"
+ balkan_league.4.d:0 "Serbia rejects an autonomaus state, instead they rather have direct control over their portion"
+ balkan_league.4.a:0 "Oh well, let the discussions continue"
+ balkan_league.4.b:0 "Unnaceptable!"
+
+ balkan_league.6.t:0 "How should we carve up Macedonia?"
+ balkan_league.6.d:0 "The Macedonian Question needs to be solved once and for all... how should we approach this?"
+ balkan_league.6.a:0 "It only seems fair that we get Central Albania, Skijope and Ohrid, right?"
+
+ balkan_league.7.t:0 "The Serbian Proposal"
+ balkan_league.7.d:0 "Serbia proposes the they inherit both Skijope and Ohrid while everything east is fair game for us..."
+ balkan_league.7.a:0 "What! Do they think we'll just sit here while they pry us of what is rightfully ours! Ohrid is a bare minimum!"
+ balkan_league.7.b:0 "Sure, looks good enough"
+
+ balkan_league.8.t:0 "Bulgaria demands Ohrid as a bare minimum..."
+ balkan_league.8.d:0 "Bulgaria demands that they atleast have Ohrid, a territory spanning eastern of Rodopi Mountains and River Strimona, and to touch eastern Albania and Lake Ohrid"
+ balkan_league.8.a:0 "Ok, but we need reassurance that Bulgaria will commit to the defense pact against Austria-Hungary"
+ balkan_league.8.b:0 "NO, absolutely not!"
+
+ balkan_league.9.t:0 "Serbia Agrees To Let Us Have Ohrid, But They Want Reassurance For The Defense Pact Against Habsburg Agression"
+ balkan_league.9.d:0 "  "
+ balkan_league.9.a:0 "Of Course Pal... Whatever You Think Is Best, I Will See To It. Now We Gonna Slaughter Some Turks?"
+ balkan_league.9.b:0 "On second thought, no thankyou"
+ 
