--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5229,6 +5229,14 @@ ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
 ROM_lessons_from_balkan_wars_desc:0 "" 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
+ROM_for_the_truth:0 "For the Truth"
+ROM_for_the_truth_desc:0 ""
+ROM_lessons_from_carpathian_defense:0 "Lesssons from Carpathian Defense"
+ROM_lessons_from_carpathian_defense_desc:0 ""
+ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
+ROM_stir_anti_austrianism_desc:0 ""
+ROM_turn_west:0 "Turn West"
+ROM_turn_west_desc:0 ""
 
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
@@ -5297,6 +5305,7 @@ ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_text
 ROM_ttyg:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!"
 
 ROM_adapt_times.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!"
+ROM_for_truth.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 member_of_pc:0 "Member of §cPC§!"
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
