better grece memorendum

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4635,7 +4635,6 @@
  TUR_increase_iskodra_centralization_10:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+10%§!\n"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
- TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
  TUR_centralize_albania_tt:0 "Unlocks £decision_icon_small  §YCentralize Albania§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
@@ -4714,6 +4713,7 @@
  TUR_british_naval_mission_tt:0 "Modify §YDonanma-yı Humâyûn§! by\n£experience_neutral_texticon  Ship Experience Gain: §G+5.0%§!\n\n"
  TUR_ratify_anglo_ottoman_convention:0 "Ratify Anglo-Ottoman Convention"
  TUR_ratify_anglo_ottoman_convention_desc:0 "While Kuwait, Qatar and Bahrain are nominally under Ottoman suzerainty, we have little to no actual authority in these territories. We should negotiate with the United Kingdom to properly define the boundries of our jurisdiction over the Persian Gulf."
+ TUR_decrease_basra_centralization_5:0 "Modify §YCentralization§! of §YBasra Vilayet§! by §R-5%§!\n"
  TUR_ratified_anglo_ottoman_convention:0 "Ratified Anglo-Ottoman Convention"
  TUR_yenikoy_accord:0 "Yeniköy Accord"
  TUR_yenikoy_accord_desc:0 "Yeniköy Accord, also known as the Armenian Reforms will put international supervision and autonomous zones to two Armenian majority vilayets, Erzurum and Van. Signing this treaty is influential for appeasing foreigners, especially Russia."
