--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5229,8 +5229,8 @@ ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
 ROM_lessons_from_balkan_wars_desc:0 "" 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
-ROM_for_the_truth:0 "For the Truth"
-ROM_for_the_truth_desc:0 ""
+ROM_for_the_truth:0 "For Romania! For the Truth!"
+ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Lesssons from Carpathian Defense"
 ROM_lessons_from_carpathian_defense_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
@@ -5303,6 +5303,7 @@ ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisio
 ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 
 ROM_ttyg:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!"
+ROM_reorg_army.tt:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+10.00%§!"
 
 ROM_adapt_times.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!"
 ROM_for_truth.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
