--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5247,9 +5247,9 @@ ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a sta
 ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
 ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
 ROM_for_country_side:0 "For the Country Side"
-ROM_for_country_side_desc:0 ""
-ROM_investments_in_rural_education:0 "Investments in Rural Education"
-ROM_investments_in_rural_education_desc:0 ""
+ROM_for_country_side_desc:0 "While a solid majority of the conservative party is made up of elites from urban areas, we cannot leave the rural areas, where most of the country lives, behind. We must give them special attention and continue to support their development."
+ROM_investments_in_rural_education:0 "Mandatory Rural Education"
+ROM_investments_in_rural_education_desc:0 "Much of rural Romania due to many farmers simply being too busy or poor to recieve an education. We shall pass a law requiring citizens to go to school, to help fix this issue."
 ROM_our_rural_base:0 "Pander to Our Rural Base"
 ROM_our_rural_base_desc:0 "We need to consolidate our support across the country to ensure we have popular support. We should increase our messaging across the rural Romania and pass some small scale laws to benefit them."
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
