--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2803,6 +2803,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_declare_moratorium:0 "Declare Moratorium"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
+ TUR_foreign_debt_payment_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
+ TUR_foreign_debt_payment_2:0 "[FROM.GetAdjective] Debt Payment"
+ TUR_foreign_debt_payment_2_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
  has_active_debt_payment:0 "Is currently paying §YForeign Debt§!"
  TUR_privatize_factories:0 "Privatize Civilian Factories"
  TUR_sell_mosul_oil:0 "Oil Concessions over Mosul"
@@ -5748,6 +5751,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
+ TRS_subjugate_the_maronite_patriarch_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n\n"
+ TRS_fund_regional_churches_tt1:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n\n"
+ TRS_fund_regional_churches_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n\n"
  TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
  TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
  TRS_arabist_movement:0 "Arabist Movement"
