christian policies on syria

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5751,7 +5751,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
+ TRS_subjugate_the_maronite_patriarch:0 "Subjugate the Maronite Patriarch"
+ TRS_subjugate_the_maronite_patriarch_desc:0 "Unlike many of the Patriarchs, the Maronite Patriach is not appointed through a decree, meaning it had a large degree of autonomy. By forcing the Maronite Patriarch to be appointed through decree, we'll effectively be able to subjugate the Maronite Christians within our empire."
  TRS_subjugate_the_maronite_patriarch_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n\n"
+ TRS_exile_unruly_bishops:0 "Exile Unruly Bishops"
+ TRS_exile_unruly_bishops_desc:0 "Many Maronite and Greek Orthodox Christians in Syria have laid their loyalties on the side of the European nations rather than our empire. As they comprise a danger for collaboration with future enemy invasions, we have to exile those bishops who're not loyal to the empire."
+ TRS_fund_regional_churches:0 "Fund Regional Churches"
+ TRS_fund_regional_churches_desc:0 "Maronite, Orthodox and even Apostolic Churches continue to lack in funding. Giving them donations to run their churches could improve the opinion of our Christian citizens in the region."
  TRS_fund_regional_churches_tt1:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n\n"
  TRS_fund_regional_churches_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n\n"
  TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
