--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5237,7 +5237,9 @@ ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
 ROM_stir_anti_austrianism_desc:0 ""
 ROM_turn_west:0 "Turn West"
 ROM_turn_west_desc:0 ""
-
+ww1_romania.33.t:0 "Hundreds of thousands of Leu for Public Works Misplaced"
+ww1_romania.33.d:0 "It seems prime minister Carp is not beating the incompentent allegations, as news papers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
+ww1_romania.33.a:0 "They're overreacting!"
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
 ROM_halve_parliments_size:0 "Halve Parliaments Seats"
