--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1062,6 +1062,8 @@
  TRS_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemâl Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
  TRS_arab_opposition:0 "Arab Opposition"
  TRS_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
+ TRS_independence_fervor:0 "Independence Fervor"
+ TRS_independence_fervor_desc:0 "Opressive rule of the Ottoman government has built up to our very moment of revolt. The fresh desire for independence shall fuel our revolt, while it still lasts."
  TRS_local_shipyards:0 "Local Shipyards"
  TRS_local_shipyards_desc:0 "Our local governate depends on small civilian shipyards for its naval production. This results in a decrease in an overall dockyard output."
  TRS_local_shipyards_instant_desc:0 "§RWill be removed if any of our core states has a Naval Dockyard§!"
