--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -11059,4 +11059,4 @@ BUL_amending_the_tarnovo_constitution_desc:0 "a"
 BUL_promote_the_tsarkaiser_relationship:0 "Promote the Tsar-Kaiser Relationship"
 BUL_promote_the_tsarkaiser_relationship_desc:0 "We've enjoyed our relationship with both Kaiser Wilhelm, Ferdinand's cousin and Kaiser Franz Joseph. We have much opportunity with the Triple Alliance, and we share an anti-Serbian sentiment! Awesome!"
 BUL_our_slavic_godfather:0 "Our Slavic Godfather"
-BUL_our_slavic_godfather_desc:0 "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter 
+BUL_our_slavic_godfather_desc:0 "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter"
