--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8236,7 +8236,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bavaria.3.a:0 "Long live Rupprecht I!"
  
  
- # BULGARIA
+ ###BULGARIA###
  
  preww1_bulgaria.1.t:0 "Negotiations with Serbia-Mutual Defense Against Austria-Hungary?"
  preww1_bulgaria.1.d:0 "However not favorable, a defense pact against Austria-Hungary is being pressed by Russia, and we could possibly redirect this defense pact to an offensive pact to support our liberation of the slavic peoples..."
@@ -15005,4 +15005,22 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  balkan_league.9.d:0 "  "
  balkan_league.9.a:0 "Of Course Pal... Whatever You Think Is Best, I Will See To It. Now We Gonna Slaughter Some Turks?"
  balkan_league.9.b:0 "On second thought, no thankyou"
+
+ balkan_league.10.t:0 "Serbia Refuses Us Ownership of Ohrid!"
+ balkan_league.10.d:0 "The latest letter from Serbia informs us that they are not willing to allow us Ohrid, they stated Ohrid is non-negotiatble Serbian land!"
+ balkan_league.10.a:0 "Hey man! Screw you! Count us out!"
+ balkan_league.10.b:0 "Oh yea, we never wanted Ohrid anyway......"
+
+ balkan_league.11.t:0 "Serbia Ceases Negotiations!"
+ balkan_league.11.d:0 "Serbia has made it clear they do not wish to further negotiate the Macedonian Question, they feel their claims aren't being respected..."
+ balkan_league.11.a:0 "Ok, we don't need you half-humans anyway!"
+
+ balkan_league.12.t:0 "Bulgaria Ceases Negotiations!"
+ balkan_league.12.d:0 "Bulgaria has expressed their disatisfaction with the develepment of the Macedonian Question and have called of negotiations and have canceled the defense pact!"
+ balkan_league.12.a:0 "We don't need you dirty dogs anyway! We'll rebuild Greater Serbia ourselves!"
+
+ balkan_league.18.t:0 "Offer and Independent Macedonia?"
+ balkan_league.18.d:0 "An independent Macedonia may be prefferable in stoping further conflicts with Serbia and we could easily influence such a nation..."
+ balkan_league.18.a:0 "Yes, an Independent Macedonia is prefferable"
+ balkan_league.18.b:0 "No, Macedonia would be better under the Tsar's direct authority"
  
