added new decisions for early balkan centralization

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2899,6 +2899,15 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_minority_name:0 "£ww1_flag_TUR  Turkish Population"
  TUR_azerbaijani_minority_name:0 "£ww1_flag_AZR  Azerbaijani Population"
 
+ bosnia_vilayet:0 "Bosna Vilayet"
+ thessaly_vilayet:0 "Thessaly Vilayet"
+ crete_vilayet:0 "Girit Vilayet"
+ montenegro_vilayet:0 "Montenegro Vilayet"
+ sofia_vilayet:0 "Sofia Vilayet"
+ attika_vilayet:0 "Attika Vilayet"
+ danube_vilayet:0 "Danube Vilayet"
+ serbia_vilayet:0 "Serbia Vilayet"
+
  TUR_no_vilayet_desc:0 "§W----------------------------§!"
  TUR_konstantiniyye_vilayet:0 "Konstantiniyye Vilayet"
  TUR_konstantiniyye_vilayet_desc:0 "[TUR_konstantiniyye_vilayet_desc]"
@@ -3075,10 +3084,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_bosnia_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_bosnia_political_power_factor|=0%+]"
  ottoman_bosnia_vilayet_104_yes:0 "\n§Y[104.GetName]§!:[TUR_south_slavic_population_104]"
 
- TUR_crete_vilayet:0 "Crete Vilayet"
+ TUR_crete_vilayet:0 "Girit Vilayet"
  TUR_crete_vilayet_desc:0 "[TUR_crete_vilayet_desc]"
  TUR_crete_vilayet_desc_yes:0 "§W[ottoman_crete_vilayet_centralization_desc][ottoman_crete_vilayet_separatist_sentiments_desc]§!"
- ottoman_crete_vilayet_tt_blocked:0 "§YCrete Vilayet§![ottoman_crete_vilayet_centralization][ottoman_crete_vilayet_separatist_sentiments]"
+ ottoman_crete_vilayet_tt_blocked:0 "§YGirit Vilayet§![ottoman_crete_vilayet_centralization][ottoman_crete_vilayet_separatist_sentiments]"
  ottoman_crete_vilayet_centralization_yes:0 "\nCentralization: [?global.TUR_crete_centralization|Y0%]"
  ottoman_crete_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_crete_centralization|Y0%][ottoman_crete_vilayet_centralization_value]"
  ottoman_crete_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_crete_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_crete_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_crete_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_crete_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_crete_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_crete_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_crete_vc_effect|+%]"
@@ -5490,7 +5499,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_increase_yanya_centralization_1:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+1%§!\n"
  TUR_increase_thessaly_centralization_1:0 "Modify §YCentralization§! of §YThessaly Vilayet§! by §G+1%§!\n"
  TUR_increase_attika_centralization_1:0 "Modify §YCentralization§! of §YAttika Vilayet§! by §G+1%§!\n"
- TUR_increase_crete_centralization_1:0 "Modify §YCentralization§! of §YCrete Vilayet§! by §G+1%§!\n"
+ TUR_increase_crete_centralization_1:0 "Modify §YCentralization§! of §YGirit Vilayet§! by §G+1%§!\n"
  TUR_increase_archipelago_centralization_1:0 "Modify §YCentralization§! of §YArchipelago Vilayet§! by §G+1%§!\n"
  TUR_increase_biga_centralization_1:0 "Modify §YCentralization§! of §YBiga Vilayet§! by §G+1%§!\n"
  TUR_increase_hudavendigar_centralization_1:0 "Modify §YCentralization§! of §YHüdavendigar Vilayet§! by §G+1%§!\n"
@@ -5542,6 +5551,16 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_increase_hejaz_centralization_20:0 "Modify §YCentralization§! of §YHejaz Vilayet§! by §G+20%§!\n"
  TUR_repel_the_grece_memorandum:0 "Repel the Greçë Memorandum"
  TUR_repel_the_grece_memorandum_desc:0 "Even though we've decided to give Albanians autonomy through approving Greçë Memorandum, the push for centralization effort in our country cannot bestove any special status to Albanians."
+ TUR_usurp_state_institutions:0 "Usurp State Institutions in [TUR_vilayet_name_list]"
+ TUR_usurp_state_institutions_desc:0 "An easy way to quickly centralize our new holdings is by taking over what was built by the previous owners. By usurping the state institutions that is already in place and appropriating it to our system, we can quicky integrate new vilayets."
+ TUR_increase_bosnia_centralization_20:0 "Modify §YCentralization§! of §YBosna Vilayet§! by §G+20%§!\n"
+ TUR_increase_thessaly_centralization_20:0 "Modify §YCentralization§! of §YThessaly Vilayet§! by §G+20%§!\n"
+ TUR_increase_crete_centralization_20:0 "Modify §YCentralization§! of §YGirit Vilayet§! by §G+20%§!\n"
+ TUR_increase_montenegro_centralization_20:0 "Modify §YCentralization§! of §YMontenegro Vilayet§! by §G+20%§!\n"
+ TUR_increase_sofia_centralization_20:0 "Modify §YCentralization§! of §YSofia Vilayet§! by §G+20%§!\n"
+ TUR_increase_attika_centralization_20:0 "Modify §YCentralization§! of §YAttika Vilayet§! by §G+20%§!\n"
+ TUR_increase_danube_centralization_20:0 "Modify §YCentralization§! of §YDanube Vilayet§! by §G+20%§!\n"
+ TUR_increase_serbia_centralization_20:0 "Modify §YCentralization§! of §YSerbia Vilayet§! by §G+20%§!\n"
  TUR_lift_the_armenian_reforms:0 "Lift the Armenian Reforms"
  TUR_lift_the_armenian_reforms_desc:0 "Though the Yeniköy Accord was signed under the pressure of foreign powers, our war against them shall justify our actions in abolishing the agreement, and working towards centralizing our Armenian vilayets."
  TUR_scrap_the_treaty_of_daan:0 "Scrap the Treaty of Daan"
