--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4637,6 +4637,17 @@
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
+ TUR_integrate_balkan_state_structures:0 "Integrate Balkan State Structures"
+ TUR_integrate_balkan_state_structures_desc:0 "Most of our Balkan holdings have slipped off of our hands in previous decades. Though we were unable to spread our control to those regions, most of the nations ruling those lands did. We can usurp their progresses of centralization and integrate those regions to our empire."
+ TUR_bosnia_vilayet_visible:0 "§YBosna Vilayet§! is visible\n"
+ TUR_thessaly_vilayet_visible:0 "§YThessaly Vilayet§! is visible\n"
+ TUR_crete_vilayet_visible:0 "§YGirit Vilayet§! is visible\n"
+ TUR_montenegro_vilayet_visible:0 "§YMontenegro Vilayet§! is visible\n"
+ TUR_sofia_vilayet_visible:0 "§YSofia Vilayet§! is visible\n"
+ TUR_attika_vilayet_visible:0 "§YAttika Vilayet§! is visible\n"
+ TUR_danube_vilayet_visible:0 "§YDanube Vilayet§! is visible\n"
+ TUR_serbia_vilayet_visible:0 "§YSerbia Vilayet§! is visible\n"
+ TUR_integrate_balkan_state_structures_tt:0 "Unlocks £decision_icon_small  §YUsurp State Institutions§! Decisions in §YBosna Vilayet§!, §YThessaly Vilayet§!, §YGirit Vilayet§!, §YMontenegro Vilayet§!, §YSofia Vilayet§!, §YAttika Vilayet§!, §YDanube Vilayet§! and §YSerbia Vilayet§!.\n"
  TUR_centralize_albania_tt:0 "Unlocks £decision_icon_small  §YCentralize Albania§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
  TUR_increase_kosova_centralization_5:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+5%§!\n"
  TUR_increase_yanya_centralization_5:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+5%§!\n"
@@ -4686,7 +4697,7 @@
  TUR_early_elections_desc:0 "Though disbanding the parliament has gave us the leverage to better organize state matters, the opposition continues to grow. To secure our power over the empire, we have to hold early elections. Yet this time, we have to secure our total majority at all cost."
  TUR_reinforce_constitutional_procedures:0 "Reinforce Constitutional Procedures"
  TUR_reinforce_constitutional_procedures_desc:0 "The İttihadist forces within the government desire to psh shady laws and even disband the government to leverage themselves in the rule of the empire. Against their unconstitutional actions, we have to safeguard the legal procedures and stick to democratic institutions."
- TUR_reinforce_constitutional_procedures_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+5.00%§!\n£boost_popularity_texticon  Daily Democracy Support: §G+0.02§!\n\n"
+ TUR_reinforce_constitutional_procedures_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+2.00%§!\n£boost_popularity_texticon  Daily Democracy Support: §G+0.01§!\n\n"
  TUR_appoint_the_opposition:0 "Appoint the Opposition"
  TUR_appoint_the_opposition_desc:0 "İttihat ve Terakki Fırkası has been proven ineffective in maneuvering the empire in times of crisis. In an effort to replace the government, a body of representatives from liberal opposition to replace Mehmed Said Paşa with their own candidate, Mehmet Kâmil Paşa. As the Sultan with his last bits of limited power left, would appoinnt the opposition to form a new government."
  TUR_appoint_mustafa_asim_bey:0 "Appoint Mustafa Asım Bey"
@@ -4934,7 +4945,7 @@
  TUR_combat_armenian_separatists_tt2:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_temporary_law_of_deportation:0 "Temporary Law of Deportation"
  TUR_temporary_law_of_deportation_desc:0 "Our non-Muslim Christian populations in bordering regions possess great threat if we engage in war with neighboring countries. As the presence of Armenians, Assyrians and other Christians are already against the type of state we've envisioned to create, this threat is the perfect opportunity to blame everything on such minorities and forcefully relocate them from their hometowns in order to Turkify the region from its minorities."
- TUR_temporary_law_of_deportation_tt:0 "Unlocks £decision_icon_small  §YDepopulate Armenia§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks £decision_icon_small  §YDepopulate Assyria§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
+ TUR_temporary_law_of_deportation_tt:0 "Unlocks £decision_icon_small  §YDepopulate Armenia§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks £decision_icon_small  §YDepopulate Assyrians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  TUR_sedentarization_of_kurdish_tribes:0 "Sedentarization of Kurdish Tribes"
  TUR_sedentarization_of_kurdish_tribes_desc:0 "Kurdish tribes enjoyed large degrees of autonomies during the early years of our empires. Yet with the emergence of the nation state exercising unopposed power within its territory, and the popularization of this concept within our leadership contradicts with the lifestyle of such tribes. To centralize the region, we'll push policies aimed at centralizing these tribes."
  TUR_sedentarization_of_kurdish_tribes_tt1:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n\n"
@@ -4963,16 +4974,16 @@
  TUR_central_governance_in_arabia_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
  TUR_central_administration_in_syria:0 "Central Administration in Syria"
  TUR_central_administration_in_syria_desc:0 "Syria as a region has included some of the most important vilayets and cities for our empire, both in terms of tax revenue and legitimacy. While the importance of these vilayets has been unquestionable, there is still quite a road ahead for the region to be fully centralized."
- TUR_central_administration_in_syria_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
+ TUR_central_administration_in_syria_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
  TUR_central_administration_in_syria_tt2:0 "§YOttoman Syria§!: [TRS_syrian_reforms_completed] Has not completed focus §YSyrian Reforms§!\n"
  trigger_yes:0 "£trigger_yes"
  trigger_no:0 "£trigger_no"
  TUR_entrench_rule_in_mesapotamia:0 "Entrench Rule in Mesapotamia"
  TUR_entrench_rule_in_mesapotamia_desc:0 "Mesapotamia has enjoyed some degree of autonomy after its incorporation into our empire. Yet the gradual centralization of our empire has started to integrate the region as regular vilayets, just like any other internal administrative division within our empire. As the integration process continues in our empire, so will our rule entrench in the region."
- TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
+ TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
  TUR_combat_arab_separatism:0 "Combat Arab Separatism"
  TUR_combat_arab_separatism_desc:0 "Our reforms to centralize our Arab realm following tanzimat reform has proven itself to be unpopular among the Arabs. Both autonomy and independence seeking Arabist movements as well as bandits and tribes in the parts of our empire we cant reach have been causing us trouble in the desert. By dealing with Arabist opposition, we will improve our control in the Arab lands."
- TUR_combat_arab_separatism_tt:0 "Unlocks £decision_icon_small  §Y"Ban Arabist Newspapers§! in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
+ TUR_combat_arab_separatism_tt:0 "Unlocks £decision_icon_small  §Y"Ban Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
  TUR_status_of_autonomy:0 "Status of Autonomy"
  TUR_status_of_autonomy_desc:0 "From our Arab Vilayets to the fringes of our Balkan lands, our empire gave autonomy, voluntarily or forcefully, to several communities. While this worked well for the previous decentralized structure for the state, the existence of very autonomies go against our very goal of centralizing our empire. Through careful policies, we have to eventually abolish these autonomies."
  TUR_clamp_down_on_arab_dissent:0 "Clamp Down on Arab Dissent"
