--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2899,15 +2899,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_minority_name:0 "£ww1_flag_TUR  Turkish Population"
  TUR_azerbaijani_minority_name:0 "£ww1_flag_AZR  Azerbaijani Population"
 
- bosnia_vilayet:0 "Bosna Vilayet"
- thessaly_vilayet:0 "Thessaly Vilayet"
- crete_vilayet:0 "Girit Vilayet"
- montenegro_vilayet:0 "Montenegro Vilayet"
- sofia_vilayet:0 "Sofia Vilayet"
- attika_vilayet:0 "Attika Vilayet"
- danube_vilayet:0 "Danube Vilayet"
- serbia_vilayet:0 "Serbia Vilayet"
-
  TUR_no_vilayet_desc:0 "§W----------------------------§!"
  TUR_konstantiniyye_vilayet:0 "Konstantiniyye Vilayet"
  TUR_konstantiniyye_vilayet_desc:0 "[TUR_konstantiniyye_vilayet_desc]"
@@ -5292,14 +5283,14 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_integrate_macedonia_desc:0 "Macedonia's importance for the empire combined with the local Turkish population makes it a real possibility for these vilayets to become a core part of our empire. Through increased opinion with locals, we can successfully integrate the region."
  TUR_integrate_macedonia_tt1:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_GRE  §YGreek Minority§! is §G0.0%§! or §Gless§!\n"
  TUR_integrate_macedonia_tt2:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! is §G0.0%§! or §Gless§!\n"
- TUR_tax_collection_in_kosova:0 "Tax Collection in Kosova Vilayet"
- TUR_tax_collection_in_kosova_desc:0 "Muslim Albanians in Kosova Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
- TUR_tax_collection_in_manastir:0 "Tax Collection in Manastır Vilayet"
- TUR_tax_collection_in_manastir_desc:0 "Muslim Albanians in Manastır Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
- TUR_tax_collection_in_yanya:0 "Tax Collection in Yanya Vilayet"
- TUR_tax_collection_in_yanya_desc:0 "Muslim Albanians in Yanya Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
- TUR_tax_collection_in_iskodra:0 "Tax Collection in İşkodra Vilayet"
- TUR_tax_collection_in_iskodra_desc:0 "Muslim Albanians in İşkodra Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_kosova:0 "Tax Collection in [TUR_vilayet_name_list]"
+ TUR_tax_collection_in_kosova_desc:0 "Muslim Albanians in [TUR_vilayet_name_list] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_manastir:0 "Tax Collection in [TUR_vilayet_name_list]"
+ TUR_tax_collection_in_manastir_desc:0 "Muslim Albanians in [TUR_vilayet_name_list] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_yanya:0 "Tax Collection in [TUR_vilayet_name_list]"
+ TUR_tax_collection_in_yanya_desc:0 "Muslim Albanians in [TUR_vilayet_name_list] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_iskodra:0 "Tax Collection in [TUR_vilayet_name_list]"
+ TUR_tax_collection_in_iskodra_desc:0 "Muslim Albanians in [TUR_vilayet_name_list] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
  TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n\n"
  TUR_centralize_albania_decision:0 "Centralize [FROM.GetName]"
  TUR_centralize_albania_decision_desc:0 "Thanks to its Muslim population, Albania stands as a stronghold as Ottoman rule in the Western Balkans. Yet the region still remains rather away from our total reach. By increasing centralization , Albanian vilayets can become a part of yet another Ottoman province."
@@ -5311,7 +5302,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_300_infantry_equipment:0 "£infantry_equipment_text_icon §Y300§!"
  TUR_decision_cost_300_infantry_equipment_blocked:0 "£infantry_equipment_text_icon §R300§!"
  TUR_improve_albanian_garrisons_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n"
- TUR_improve_albanian_garrisons:0 "Improve Albanian Garrisons"
+ TUR_improve_albanian_garrisons:0 "Improve Albanian Garrisons in [FROM.GetName]"
  TUR_improve_albanian_garrisons_desc:0 "Albania has been experiencing high and frequent levels of rebellions in the past years. To safeguard our control in the region, we have to better equip our garrisons to show up a more effective force against the rebels."
  TUR_improve_albanian_garrisons_tt2:0 "£political_violence_texticon  Resistance Target: §G-10%§!\n\n"
  TUR_improve_albanian_garrisons_tt3:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G-5%§!\n\n"
@@ -5444,12 +5435,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
  TUR_pro_ottoman_propaganda_for_shia_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
- TUR_curb_foreign_influence:0 "Curb Foreign Influence"
+ TUR_curb_foreign_influence:0 "Curb Foreign Influence in [TUR_vilayet_name_list]"
  TUR_curb_foreign_influence_desc:0 "Foreign influence in some parts of our Syrian vilayets have grown to a point that it's replacing our own government's influence. We must restrict foreign operations in these lands to increase our control over these lands."
  TUR_curbing_our_influence_in_middle_east1:0 "Curbing Our Influence in Middle East"
  TUR_curbing_our_influence_in_middle_east2:0 "Curbing Our Influence in Middle East"
  TUR_curbing_our_influence_in_middle_east3:0 "Curbing Our Influence in Middle East"
- TUR_improve_state_institutions:0 "Improve State Institutions"
+ TUR_improve_state_institutions:0 "Improve State Institutions in [TUR_vilayet_name_list]"
  TUR_improve_state_institutions_desc:0 "Our citizens in the Arab lands experience various hardships. As we improve the institutions in these vilayets, we'll centralize these lands and earn the trust of our people."
  TUR_increase_aleppo_centralization_10:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+10%§!"
  TUR_increase_damascus_centralization_10:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+10%§!"
@@ -5461,7 +5452,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_surpress_arab_dissent_desc:0 "Our Arab population in [FROM.GetName] has proven to be quite unsatisfied with our rule. In order to protect the integrity of the state, we must purge the territory from any dissent it has under it."
  TUR_surpress_arab_dissent_tt1:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+2%§!\n\n"
  TUR_surpress_arab_dissent_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+1%§!\n\n"
- TUR_ban_arabist_newspapers:0 "Ban Arabist Newspapers in [FROM.GetName]"
+ TUR_ban_arabist_newspapers:0 "Ban Arabist Newspapers in [TUR_vilayet_name_list]"
  TUR_ban_arabist_newspapers_desc:0 "Arab nationalist newspapers have been getting more and more popular in the last few years. As these newspapers popularize and perhaps even trigger Arab rebellions, the only logical option we have is to entirely outlaw them."
  TUR_forced_labor_in_middle_east:0 "Forced Labor in [FROM.GetName]"
  TUR_forced_labor_in_middle_east_desc:0 "Lack of development and inefficient government power in [FROM.GetName] results in the region lacking in development. By forming force labor in the region, we can increase the development of the state."
